--- a/lesson7/css/style.css
+++ b/lesson7/css/style.css
@@ -54,7 +54,7 @@ address {
 -------------------------------------------------- */
 /* ヘッダー */
 .header {
-  
+  position: relative;
   /* メニューボタンの絶対配置の基準となる */
   padding: 15px 0 0;
   background-color: #fff;
@@ -73,11 +73,11 @@ address {
   「display: none;」で非表示にしている。
   -------------------- */
 .nav-toggle {
-  
+  display: none;
 }
 /* ハンバーガーボタン */
 .btn-burger {
-  
+  position: absolute;
   /* 親要素（.header）を基準に絶対配置 */
   top: 5px;
   right: 10px;
@@ -94,7 +94,7 @@ address {
 }
 /* メニューが開いたときの、ハンバーガーボタンの画像を指定 */
 .nav-toggle:checked~.btn-burger {
-  
+  background: url("../img/close.svg") center center / 26px 26px no-repeat;
 }
 /* ナビゲーション */
 .nav {
@@ -102,7 +102,7 @@ address {
   background: url("../img/nav_bg.png") center center / cover no-repeat;
 }
 .nav-list {
-  
+  display: none;
   /* 最初はメニュー（ul要素）を非表示にしておく指定 */
   margin: 0;
   padding-bottom: 10px;
@@ -118,7 +118,7 @@ address {
 }
 /* メニューが開いたとき、<ul>を表示する */
 .nav-toggle:checked~.nav .nav-list {
-  
+  display: block;
 }
 /* ----------ナビゲーションのスタイル指定 ここまで---------- */
 
@@ -215,29 +215,32 @@ address {
 /* 入場料（テーブル） */
 /* テーブル全体への指定 */
 .price-table {
-  
-  
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 12px;
   /* テーブルの境界線が重ねて表示する */
-  
 }
 /* <thead>に対する指定 */
-
-  
-  
-
+.price-table thead{
+  color: #fff;
+  background-color: #4184e2;
+}
 /* <th>と<td>に対する指定 */
-
-  
-  
-  
-
+.price-table th,
+.price-table td {
+  padding: 20px 15px;
+  font-weight: 500;
+  border: 1px solid #707070;
+} 
 /* <tbody>内の<th>に対する指定 */
-
-  
-  
-
+.price-table tbody th{
+  text-align: left;
+  background-color: #fff;
+}
 /* <tbody>内の<td>に対する指定 */
-
+.price-table tbody td{
+  background-color: #fff;
+}
   
 
 
@@ -246,39 +249,54 @@ address {
 -------------------------------------------------- */
 /* フォームの3つのブロックに対する指定 */
 .form-group {
-  
+  margin-bottom: 20px;
 }
 /* 項目名に対する指定 */
 .form-label {
-  
-  
-  
+  display: block;
+  margin-bottom: 10px;
+  color: #032559;
 }
 /* 送信ボタンを囲む<div>に対する指定 */
 .form-btn {
-  
-  
+  margin: 30px 0;
+  text-align: center;
 }
 /* 入力欄に対する指定 */
 
-  
-  
-  
+  input[type="text"],
+  input[type="email"],
+  textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #999;
+  }
 
 /* 入力欄が:focus（入力状態）のとき */
 
-  
+  input[type="text"]:focus,
+  input[type="email"]:focus,
+  textarea:focus{
+    border-color: #032559;
+    outline: none;
+  }
   
 
 /* 送信ボタン */
 
-  
+  button[type="submit"]{
+    background: none;
+    border: none;
+    cursor: pointer;
+  }
   
   
 
 /* 送信ボタンが:hoverのとき */
 
-  
+  button[type="submit"]:hover{
+    opacity: 0.65;
+  }
 
 /* --------------------------------------------------
   幅768px未満のスタイル指定 ここまで
@@ -290,18 +308,18 @@ address {
 @media screen and (min-width: 768px) {
   /* ヘッダー */
   .header {
-    
+    padding: 40px 0 0;
   }
   /* ロゴ */
   .logo {
-    
-    
-    
-    
+    width: auto;
+    margin: 0 0 20px;
+    padding: 0;
+    text-align: center;
   }
   /* ハンバーガーボタン */
   .btn-burger {
-    
+    display: none;
     /* 768px以上では使用しない */
   }
   /* ナビゲーション */
@@ -310,16 +328,20 @@ address {
   }
   .nav-list {
     /* flexbox（横並びにする要素の親に指定） */
-    
+
+    display: flex;
     /* フレックスアイテムを主軸方向（横方向）中央揃えで配置 */
-    
+
+    justify-content: center;
     /* フレックスアイテムを交差軸方向（縦方向）中央揃えで配置 */
-    
+
+    align-items: center;
     padding: 0;
   }
   .nav-list li {
     /* フレックスアイテムに対する指定 */
-    
+
+    flex: 0 1 auto;
     padding: 0 20px;
     line-height: 1;
     border-right: 1px solid #fff;
@@ -331,7 +353,8 @@ address {
   }
   /* 幅768px未満でメニューを開いた状態から、ウィンドウ幅を768px以上に広げたとき、メニューにflexboxを適用して<li>を横並び表示に切り替える */
   .nav-toggle:checked~.nav .nav-list {
-    
+
+    display: flex;
   }
   /* セクション */
   .section {
@@ -359,13 +382,14 @@ address {
   /* 横並び */
   .row {
     /* flexbox（横並びにする要素の親に指定） */
-     
+    display: flex;
+    justify-content: space-between;
     
   }
   /* 横並び要素 */
   .col {
     /* フレックスアイテムに対する指定 */
-    
+    flex: 0 1 32%;
     margin: 0;
   }
   /* --------------------------------------------------
@@ -373,11 +397,11 @@ address {
   -------------------------------------------------- */
   /* 入場料（テーブル） */
   .price-table {
-    
+    font-size: 16px;
   }
   /* <th>と<td>に対する指定 */
   .price-table th, .price-table td {
-    
+    padding: 20px;
   }
   /* --------------------------------------------------
   お問い合わせフォーム
@@ -385,7 +409,8 @@ address {
   /* フォームの3つのブロックに対する指定 */
   .form-group {
     /* flexbox（横並びにする要素の親に指定） */
-    
+    display: flex;
+    max-width: 800px;
     
     /* 横幅の最大値 */
     margin-bottom: 10px;
@@ -393,15 +418,17 @@ address {
   /* 項目名に対する指定 */
   .form-label {
     /* フレックスアイテムに対する指定 */
-    
-    
+    flex: 0 0 12em;
+    max-width: 12em;
     margin: 0;
     padding-top: 5px;
   }
   /* 入力欄を囲む<div>に対する指定 */
   .form-col {
     /* フレックスアイテムに対する指定 */
-    
+    -webkit-box-flex: 0;
+    -ms-flex: 0 1 100%;
+    flex: 0 1 100%;
   }
 }
 /* --------------------------------------------------
